<resources>
    <!-- System -->
    <string name="app_name">Calculator</string>
    <!-- Main Activity -->
    <string name="app_title">Calculator</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="plus">+</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="minus">-</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="times">*</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="num0">0</string>
    <string name="equal">=</string>
</resources>