<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaCalculatrice.TextInputLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_top_size"
            android:layout_marginBottom="@dimen/main_component_space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="2"
                android:textAlignment="center"
                android:textSize="@dimen/main_result_text_size" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_component_space"
        android:layout_marginEnd="@dimen/main_component_space"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:rowCount="5">

        <!-- Ligne 1 -->
        <Button
            android:id="@+id/clear"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/clear"
            android:textColor="@color/red"
            android:textSize="@dimen/main_text_size" />

        <Button
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/delete"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/delete"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/division"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/divide"
            android:textSize="@dimen/main_text_size" />

        <!-- Ligne 2 -->
        <Button
            android:id="@+id/num7"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num7"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num8"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num8"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num9"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num9"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/multiply"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/times"
            android:textSize="@dimen/main_text_size" />

        <!-- Ligne 3 -->
        <Button
            android:id="@+id/num4"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num4"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num5"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num5"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num6"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num6"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/substraction"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/minus"
            android:textSize="@dimen/main_text_size" />

        <!-- Ligne 4 -->
        <Button
            android:id="@+id/num1"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num1"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num2"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num2"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num3"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num3"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/addition"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/plus"
            android:textSize="@dimen/main_text_size" />

        <!-- Ligne 5 -->
        <Button
            android:id="@+id/dot"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/dot"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/num0"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/num0"
            android:textSize="@dimen/main_text_size" />

        <Button
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="@dimen/main_button_width_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/equal"
            style="@style/Widget.MaCalculatrice.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:backgroundTint="@color/lightskyblue"
            android:text="@string/equal"
            android:textColor="@color/darkgreyV2"
            android:textSize="@dimen/main_text_size" />
    </GridLayout>
</LinearLayout>